--- a/Homepage/23-24.html
+++ b/Homepage/23-24.html
@@ -13,19 +13,45 @@
             <div class="styleguide-section__grid-demo-element">
                 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #EBEBEB; border: 1.5px solid; border-color: #2a2a2a; text-align: center;">
                     <a class="btn Button" style="margin: 5px; border-color: #2a2a2a;" href="https://canvas.uva.nl/enroll/N3HMY8" data-api-returntype="Page"><i class="icon-discussion-new">&nbsp;</i>Enroll</a>
-                    <a class="btn Button" style="margin: 5px; border-color: #2a2a2a;" href="https://canvas.uva.nl/courses/8175/pages/icto-newsletter" target="_blank" rel="noopener" data-api-returntype="Page"></i><i class="icon-announcement"></i>&nbsp; ICTO Newsletter
-                    </a>
+                    <a class="btn Button" style="margin: 5px; background-color: #0097D3; border-color: #063852;" href="https://canvas.uva.nl/courses/8175/pages/icto-newsletter" target="_blank" rel="noopener" data-api-returntype="Page"><span style="color: #ffffff;"><i class="icon-announcement"></i>&nbsp; ICTO Newsletter</span></a>
                     <a class="btn Button" style="margin: 5px; border-color: #2a2a2a;" href="https://canvas.uva.nl/courses/8175/pages/contact" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/contact"><i class="icon-group"></i>
                         <span>&nbsp;Contact</span>
                     </a>
                 </div>
             </div>
         </div>
-
-        <!-- Media afbeelding -->
-        <div class="col-xs-20 col-md-3">
+        
+        <!-- Examination afbeelding -->
+        <div class="col-xs-20 col-md-4">
             <div class="styleguide-section__grid-demo-element" style="text-align: left; float: left;">
-                <img src="/courses/23256/files/9194233/preview" alt="Video (1).png"  height="120" style="margin-top: 20px;" />
+                <img src="/courses/23256/files/9197056/preview" alt="examination-homepage-pic-1.png" height="120" style="margin-top: 20px;" />
+            </div>
+        </div>
+
+        <!-- Examination -->
+        <div class="col-xs-20 col-md-8">
+            <div class="styleguide-section__grid-demo-element" style="text-align: top;">
+
+                <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; border-color: #000000; margin-bottom: 3px; padding: 18px; padding-bottom: 27px; text-align: left;">
+
+                    <h5><span style="font-size: 18pt;">Examination</span></h5>
+
+                    <!-- TestVision -->
+                    <a id="" class="Button Button" style="width: auto; height: 13%; margin: 5px; border-color: #ffffff;" title="TestVision" href="https://canvas.uva.nl/courses/8175/pages/testvision" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision" data-api-returntype="Page"> <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4378110/preview" alt="TEELEN-Logo-RGB.png" width="23" height="43" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4378110" data-api-returntype="File" /><span style="color: #000000;">TestVision</span></a>
+
+                    <!-- Final Grades-->
+                    <a id="" class="Button Button" style="width: auto; height: 13%; margin: 5px; border-color: #ffffff;" title="Final grades tool" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page"> <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="Canvas-logo.png" width="23" height="41" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="color: #000000;">Final Grades</span></a>
+
+                    <!-- Final Grades-->
+                    <a id="" class="Button Button" style="width: auto; height: 13%; margin: 5px; border-color: #ffffff;" title="Final grades tool" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page"> <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="Canvas-logo.png" width="23" height="41" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="color: #000000;">Grades</span></a>
+
+                    <!-- Turnitin-->
+                    <a id="" class="Button Button" style="width: auto; height: 13%; margin: 5px; border-color: #ffffff;" title="Turnitin Similarity" href="https://canvas.uva.nl/courses/8175/pages/homepage-turnitin-similarity" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/homepage-turnitin-similarity" data-api-returntype="Page"> <img id="4377529" style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/8014734/preview" alt="Turnitin-logo-bg.png" width="23" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8014734" data-api-returntype="File" /><span style="color: #000000;">Turnitin Similarity</span></a>
+
+                    <!-- Assignments -->
+                    <a id="" class="Button Button" style="border-color: #ffffff; width: auto; height: 13%; margin: 5px;" title="Assignments" href="#assignments" target=""><img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="Canvas-logo.png" width="23" height="41" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="font-size: 12pt;">Assignments</span></a>
+
+                </div>
             </div>
         </div>
 
@@ -54,45 +80,16 @@
 
                         <!-- Hybrid teaching -->
                         <a id="" class="Button Button" style="border-color: #ffffff; width: auto; height: 13%; margin: 5px;" title="Hybrid" href="#hybrid" target=""><span style="font-size: 12pt; color: #000000;">Hybrid teaching</span></a>
-
                 </div>
             </div>
         </div>
 
-
-        <!-- Examination -->
-        <div class="col-xs-20 col-md-9">
-            <div class="styleguide-section__grid-demo-element" style="text-align: top;">
-                <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #ffffff; border-color: #000000; margin-bottom: 3px; padding: 18px; text-align: left;">
-
-                    <h5><span style="font-size: 18pt;">Examination</span></h5>
-
-                    <!-- TestVision -->
-                    <a id="" class="Button Button" style="width: auto; height: 13%; margin: 5px; border-color: #ffffff;" title="TestVision" href="https://canvas.uva.nl/courses/8175/pages/testvision" target="" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/testvision" data-api-returntype="Page"> <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4378110/preview" alt="TEELEN-Logo-RGB.png" width="23" height="43" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4378110" data-api-returntype="File" /><span style="color: #000000;">TestVision</span></a>
-
-                    <!-- Final Grades-->
-                    <a id="" class="Button Button" style="width: auto; height: 13%; margin: 5px; border-color: #ffffff;" title="Final grades tool" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page"> <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="Canvas-logo.png" width="23" height="41" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="color: #000000;">Final Grades</span></a>
-
-                    <!-- Final Grades-->
-                    <a id="" class="Button Button" style="width: auto; height: 13%; margin: 5px; border-color: #ffffff;" title="Final grades tool" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page"> <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="Canvas-logo.png" width="23" height="41" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="color: #000000;">Grades</span></a>
-
-                    <!-- Turnitin-->
-                    <a id="" class="Button Button" style="width: auto; height: 13%; margin: 5px; border-color: #ffffff;" title="Turnitin Similarity" href="https://canvas.uva.nl/courses/8175/pages/homepage-turnitin-similarity" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/homepage-turnitin-similarity" data-api-returntype="Page"> <img id="4377529" style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/8014734/preview" alt="Turnitin-logo-bg.png" width="23" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8014734" data-api-returntype="File" /><span style="color: #000000;">Turnitin Similarity</span></a>
-
-                    <!-- Assignments -->
-                    <a id="" class="Button Button" style="border-color: #ffffff; width: auto; height: 13%; margin: 5px;" title="Assignments" href="#assignments" target=""><img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="Canvas-logo.png" width="23" height="41" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="font-size: 12pt;">Assignments</span></a>
-
-                </div>
+        <!-- Media afbeelding -->
+        <div class="col-xs-20 col-md-3">
+            <div class="styleguide-section__grid-demo-element" style="text-align: left; float: left;">
+                <img src="/courses/23256/files/9194233/preview" alt="Video (1).png"  height="120" style="margin-top: 20px;"/>
             </div>
         </div>
-
-         <!-- Examination afbeelding -->
-         <div class="col-xs-20 col-md-3">
-            <div class="styleguide-section__grid-demo-element" style="text-align: left; float: left; margin-top: 20px;">
-                <img src="/courses/23256/files/9194247/preview" alt="Video (2).png" height="120"/>
-            </div>
-        </div>
-
 
         <!-- Feedback tools -->
         <div class="col-xs-20 col-md-6">
