--- a/Homepage/22_23.html
+++ b/Homepage/22_23.html
@@ -100,9 +100,9 @@
             <div class="styleguide-section__grid-demo-element" style="text-align: center;">
                 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #E6EBED; border-color: #063852; padding: 30px; padding-bottom: 50px; margin-bottom: 10px; text-align: left;">
 
-                    <span style="float: middle; font-size: 18pt; align: center;">
+                    <span style="float: middle; font-size: 18pt; text-align: center;">
 
-                        New in <img style="width: auto; float: center; height: 30px; vertical-alignment: center; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/7105590/preview" alt="2223.png" width="109" height="30" />
+                        New in <img style="width: auto; float: center; height: 30px; text-align: center; vertical-align: center; margin-left: 5px;" src="https://canvas.uva.nl/courses/8175/files/7105590/preview" alt="2223.png" width="109" height="30" />
 
                         <!-- Newsletter -->
                         <a id="" class="Button Button--large" style="border-color: #063852; width: 85%; height: 20%; text-align: left; margin-left: auto; margin-right: auto; margin-top: 20px; padding-bottom: 20px;" title="" href="https://canvas.uva.nl/courses/8175/pages/icto-newsletter" target="" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/icto-newsletter" data-api-returntype="Page">
@@ -118,7 +118,7 @@
             <!-- Usefule guides -->
             <div class="styleguide-section__grid-demo-element" style="text-align: center;">
                 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #E6EBED; border-color: #063852; padding: 30px; padding-bottom: 50px; margin-bottom: 10px; text-align: left;">
-                    <span style="float: middle; font-size: 18pt; align: center;">
+                    <span style="float: middle; font-size: 18pt; text-align: center;">
 
                         Useful guides
 
@@ -143,7 +143,7 @@
         <div class="col-xs-12 col-md-20">
             <div class="styleguide-section__grid-demo-element" style="text-align: center;">
                 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #E6EBED; border-color: #063852; padding: 30px; padding-bottom: 50px; margin-bottom: 10px; text-align: left;">
-                    <span style="float: middle; font-size: 18pt; align: center;">
+                    <span style="float: middle; font-size: 18pt; text-align: center;">
                         Explore
                         <br>
                         <a id="" class="Button Button--large" style="width: 92%; height: 20%; text-align: left; margin-left: auto; margin-top: 20px; padding-bottom: 20px; border-color: #063852; " href="https://canvas.uva.nl/courses/8175/pages/course-checklist" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/course-checklist" data-api-returntype="Page">
