kleine toevoeging in kaltura instructie ter verduidelijking

--- a/A-Z/Tools/kaltura.html
+++ b/A-Z/Tools/kaltura.html
@@ -98,7 +98,7 @@
                         <p>A Kaltura video assignment is created as follows:</p>
                         <ol>
                             <li>Go to your Canvas course and create an assignment by clicking <u>+ Assignment</u>.</li>
-                            <li>Under 'Submission type' select <u>Online</u>.</li>
+                            <li>Under 'Submission type' select <u>Online</u> &gt; <u>Text entry</u>.</li>
                             <li>Fill out the rest of your assignment details and click <u>Save</u> at the bottom of the page.</li>
                             <li>Students can hand in their video assignment by clicking the <u>three dots</u> and selecting the <u>Kaltura icon</u> (see image below).</li>
                         </ol>
