--- a/Homepage/23-24-versie2.html
+++ b/Homepage/23-24-versie2.html
@@ -37,14 +37,18 @@
             <!-- Final Grades-->
             <a id="" class="Button Button" style="width: auto; height: 13%; margin: 5px; border-color: #063852;" title="Final grades tool" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page"> <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="Canvas-logo.png" width="23" height="41" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="color: #000000;">Final Grades</span></a>
 
-            <!-- Final Grades-->
-            <a id="" class="Button Button" style="width: auto; height: 13%; margin: 5px; border-color: #063852;" title="Final grades tool" href="https://canvas.uva.nl/courses/8175/pages/final-grades-tool" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/final-grades-tool" data-api-returntype="Page"> <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="Canvas-logo.png" width="23" height="41" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="color: #000000;">Grades</span></a>
+            <!-- Grades met logo -->
+            <a id="" class="Button Button" style="width: auto; height: 13%; margin: 5px; border-color: #063852;" title="Final grades tool" href="https://canvas.uva.nl/courses/8175/pages/grades" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/grades" data-api-returntype="Page"> <img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="Canvas-logo.png" width="23" height="41" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="color: #000000;">Grades</span></a>
 
             <!-- Turnitin-->
             <a id="" class="Button Button" style="width: auto; height: 13%; margin: 5px; border-color: #063852;" title="Turnitin Similarity" href="https://canvas.uva.nl/courses/8175/pages/homepage-turnitin-similarity" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/homepage-turnitin-similarity" data-api-returntype="Page"> <img id="4377529" style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/8014734/preview" alt="Turnitin-logo-bg.png" width="23" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/8014734" data-api-returntype="File" /><span style="color: #000000;">Turnitin</span></a>
 
             <!-- Assignments -->
-            <a id="" class="Button Button" style="border-color: #063852; width: auto; height: 13%; margin: 5px;" title="Assignments" href="#assignments" target=""><img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="Canvas-logo.png" width="23" height="41" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="font-size: 12pt;">Assignments</span></a>
+            <a id="" class="Button Button" style="border-color: #063852; width: auto; height: 13%; margin: 5px;" title="Assignments" href="https://canvas.uva.nl/courses/8175/pages/assignments" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/assignments" data-api-returntype="Page"><img style="margin-right: 20px;" src="https://canvas.uva.nl/courses/8175/files/4377529/preview" alt="Canvas-logo.png" width="23" height="41" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/files/4377529" data-api-returntype="File" /><span style="font-size: 12pt;">Assignments</span></a>
+
+            <!-- Grades zonder logo
+            <a id="" class="Button Button" style="width: auto; height: 13%; margin: 5px; border-color: #063852;" title="Final grades tool" href="https://canvas.uva.nl/courses/8175/pages/grades" data-api-endpoint="https://canvas.uva.nl/courses/8175/pages/grades" data-api-returntype="Page"><span style="color: #000000;">Grades</span></a>
+            -->
 
         </div>
     </div>
