stukje voor feedbackfruits geschreven

--- a/Nieuwsbrief/23-24-ed1.html
+++ b/Nieuwsbrief/23-24-ed1.html
@@ -139,19 +139,21 @@
 
             <td style="width:50%; height:100%">
 
-                <!-- Nieuw: Perusall -->   
+                <!-- Nieuw: FeedbackFruits -->   
                 <!-- Banner -->     <div class="content-box" style="margin-top:5px;margin-bottom:2px;margin-left:8px; "><img style="width:100%" src="https://canvas.uva.nl/courses/8175/files/9206049/preview" alt="feedbackfruits.png"></div>
 
                 <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #E0F6DE; height:78%; margin-top:5px; margin-left:8px; margin-bottom:5px; border-color: #E0F6DE; padding-left: 15px;">
                     
                 <!-- Header -->     <h3><strong>FeedbackFruits info page</strong></h3>
                 <!-- Inhoud -->     <p style="font-size: 12pt">
-                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.                    
+                                        Also make sure to visit our <a href="https://canvas.uva.nl/courses/8175/pages/feedbackfruits-overview-tools-for-enriched-learning-materials" target="_blank">new FeedbackFruits information page</a>! FeedbackFruits offers a suite of tools that facilitate (online) learning activities. Examples of possiblities are the enrichment of audio, video and documents with questions, automated feedback on papers and the organisation of a peer review assignment. All FeedbackFruits tools are fully integrated into Canvas, meaning the grades sync back seamlessly.
+                                        <br><br>Our recently updated information page features an overview of all tools at your disposal and a flowchart to help you pick the tool that suits your needs. Every tool has an instruction on how to get started and a live example, so you can experience the tool as if you were a student.
+                                        <br><br>Take a look and don't hesitate to contact ICTO if you need support or want to brainstorm about the possibilities of integrating FeedbackFruits in your course.
                                     </p>
                 <!-- Keywords --> 
-                <ul class="pill" style="background: #1F5D1B; margin-top: 10px; margin-right: 2px; margin-bottom: 2px; float:right; border-color:#1F5D1B"><li><span style="color: #ffffff;"><strong>keyword</strong></span></li></ul>
-                <ul class="pill" style="background: #1F5D1B; margin-top: 10px; margin-right: 2px; margin-bottom: 2px; float:right; border-color:#1F5D1B"><li><span style="color: #ffffff;"><strong>keyword</strong></span></li></ul>
-                <ul class="pill" style="background: #1F5D1B; margin-top: 10px; margin-right: 2px; margin-bottom: 2px; float:right; border-color:#1F5D1B"><li><span style="color: #ffffff;"><strong>keyword</strong></span></li></ul>
+                <ul class="pill" style="background: #1F5D1B; margin-top: 10px; margin-right: 2px; margin-bottom: 2px; float:right; border-color:#1F5D1B"><li><span style="color: #ffffff;"><strong>FeedbackFruits</strong></span></li></ul>
+                <ul class="pill" style="background: #1F5D1B; margin-top: 10px; margin-right: 2px; margin-bottom: 2px; float:right; border-color:#1F5D1B"><li><span style="color: #ffffff;"><strong>feedback</strong></span></li></ul>
+                <ul class="pill" style="background: #1F5D1B; margin-top: 10px; margin-right: 2px; margin-bottom: 2px; float:right; border-color:#1F5D1B"><li><span style="color: #ffffff;"><strong>annotations</strong></span></li></ul>
                 </div>
             
             </td>
