CSSci homepage update

--- a/CCSi/Homepage_FOUNDATION.html
+++ b/CCSi/Homepage_FOUNDATION.html
@@ -21,9 +21,9 @@
     </ul>
 
     <div id="About" style="background-color: #ffffff; height: auto; padding-left: 30px; padding-top: 30px; padding-bottom: 50px;">
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #f9e663; title="">
+        <a id="" href="https://canvas.uva.nl/courses/39885/files/9229787?module_item_id=1787498" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #f9e663; title="">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Course manual</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>More information will follow soon</em></span>
+            <span style="font-size: 10pt; color: #124240;"><em>Course Manual Semester 1 Foundation 2023-2024</em></span>
         </a>
         <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="https://canvas.uva.nl/courses/39885/assignments">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Assignment deadlines</span></h5>
