tabs daadwerkelijk gerepareerd

--- a/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
+++ b/A-Z/Exams/TestVision/22-23/0_Home_22-23.html
@@ -10,10 +10,10 @@
 <div class="enhanceable_content tabs">
     <ul>
         <li>
-            <div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>About</strong></span></div>
+            <a href="#tab-0"><div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>About</strong></span></div></a>
         </li>
         <li>
-            <div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Tips &amp; Tricks</strong></span></div>
+            <a href="#tab-1"><div class="content-box" style="background-color: #ffffff; margin: 5px; height: 35px; border: #000000;"><span style="font-size: 13pt;"><strong>Tips &amp; Tricks</strong></span></div></a>
         </li>
     </ul>
     <div id="tab-0" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
@@ -71,7 +71,7 @@
             </div>
         </div>
     </div>
-    <div id="tab-3" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
+    <div id="tab-1" style="background-color: #ffffff; height: auto; padding: 30px; padding-top: 30px; padding-bottom: 50px;">
         <div class="content-box pad-box-mini border border-trbl border-round" style="border-color: #063852; padding: 15px; height: auto; background-color: #fafafa;">
             <table style="border-collapse: collapse; width: 100.812%;">
                 <tbody>
