--- a/CCSi/Homepage_FOUNDATION.html
+++ b/CCSi/Homepage_FOUNDATION.html
@@ -33,9 +33,9 @@
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Weekly schedule</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>You can view your weekly schedule via rooster.uva.nl. if you have downloaded or printed this information, please be aware that times, dates and locations may be subject to change and you should regularly check your online timetable.</em></span>
         </a>
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="">
-            <h5><span style="font-size: 14pt; color: #1e1e1e;">TA Support</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>More information will follow soon</em></span>
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="https://amsuni.sharepoint.com/:x:/s/FMG_SW_FMG___SW___Cssci/EQ040PW_1gZEovFf_OTLHhYBREqPPZPyC61pHgoR9EF-Ng?e=hgnBH8&CID=B2B85DCA-7C5B-4198-8C71-3334222ABAFE">
+            <h5><span style="font-size: 14pt; color: #1e1e1e;">TA Support Hours</span></h5>
+            <span style="font-size: 10pt; color: #124240;"><em>In need of support from your Learning Team or Digital Expertise TAs? Please check where and when you can find them! </em></span>
         </a>
     </div>
 
@@ -47,7 +47,7 @@
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">All modules</span>
         </a>
         <!-- 1 -->
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 1: September 4-7" href="/courses/39885/modules/327546?wrap=1">
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 1: September 4-8" href="/courses/39885/modules/327546?wrap=1">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 1: September 4-8</span>
         </a>
         <!-- 2 -->
@@ -83,7 +83,7 @@
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 9:  October 30 - November 3</span>
         </a>
         <!-- 10 -->
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 10: November 7-11" href="/courses/39885/modules/327563?wrap=1">
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 10: November 6-10" href="/courses/39885/modules/327563?wrap=1">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 10:  November 6-10</span>
         </a>
         <!-- 11 -->
@@ -111,7 +111,7 @@
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 16:  December 18-22</span>
         </a>
         <!-- 17 -->
-        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 17: January 9-13" href="/courses/39885/modules/327570?wrap=1">
+        <a id="" class="Button Button--large" style="border-width: 1.5px; width: 93%; height: 12px; text-align: left; margin-left: auto; margin-top: 9px; padding-bottom: 20px; border-color: #f9e663; title="Week 17: January 8-12" href="/courses/39885/modules/327570?wrap=1">
             <span style="font-size: 12pt; color: #1e1e1e; text-align; center;">Week 17:  January 8-12</span>
         </a>
         <!-- 18 -->
