deze keer echt de dode copyright link vervangen

--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -527,7 +527,7 @@
                                 <td style="width: 4.47733%;">
                                     <p><strong>&nbsp;</strong></p>
                                 </td>
-                                <td style="width: 22.3964%;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/9646" data-api-endpoint="https://canvas.uva.nl/courses/9646" data-api-returntype="Page"> <span>View more</span> </a></td>
+                                <td style="width: 22.3964%;"><a class="btn Button" style="margin: 5px;" href="https://medewerker.uva.nl/fmg/shared-content-secured/medewerkersites/uva-medewerkers/nl/az/auteursrecht/auteursrecht.html?origin=qddWbhliR1aCq562Nkn6qg" data-api-endpoint="https://medewerker.uva.nl/fmg/shared-content-secured/medewerkersites/uva-medewerkers/nl/az/auteursrecht/auteursrecht.html?origin=qddWbhliR1aCq562Nkn6qg" data-api-returntype="Page"> <span>View more</span> </a></td>
                             </tr>
                         </tbody>
                     </table>
