nog meer dooie links vervangen

--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -368,7 +368,7 @@
                         <tbody>
                             <tr>
                                 <td style="width: 19.3883%;">
-                                    <p style="text-align: center;"><span style="color: #3598db; font-size: 17pt;"> <span style="color: #3598db;"> <strong> <span style="color: #000000;">Conversations</span> </strong> </span> </span></p>
+                                    <p style="text-align: center;"><span style="color: #3598db; font-size: 17pt;"> <span style="color: #3598db;"> <strong> <span style="color: #000000;">Inbox</span> </strong> </span> </span></p>
                                     <p>&nbsp;</p>
                                 </td>
                                 <td style="width: 4.404%;">
@@ -386,12 +386,12 @@
                                             <li><span style="color: #ffffff;"><strong>Communicate with students</strong></span></li>
                                         </ul>
                                     </div>
-                                    <p><span style="color: #5a5a5a;">Conversations is the messaging tool which is used to communicate with a course, a group or an individual student in Canvas. Conversations are also sent as an email. Use the Inbox to send a message to someone in your course or group, reply to messages from others in your course, filter conversations by course or type, and view/reply to assignment submission comments</span></p>
+                                    <p><span style="color: #5a5a5a;">The inbox is the messaging tool which is used to communicate with a course, a group or an individual student in Canvas. Messages sent from the inbox are also sent as an email. Use the inbox to send a message to someone in your course or group, reply to messages from others in your course, filter by course or type, and view/reply to assignment submission comments.</span></p>
                                 </td>
                                 <td style="width: 4.47733%;">
                                     <p><strong>&nbsp;</strong></p>
                                 </td>
-                                <td style="width: 22.3964%;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/canvas-conversations-mail" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/canvas-conversations-mail"> <span>View more</span> </a></td>
+                                <td style="width: 22.3964%;"><a class="btn Button" style="margin: 5px;" href="https://community.canvaslms.com/t5/Instructor-Guide/tkb-p/Instructor#Inbox" data-api-returntype="Page" data-api-endpoint="https://community.canvaslms.com/t5/Instructor-Guide/tkb-p/Instructor#Inbox"> <span>View more</span> </a></td>
                             </tr>
                         </tbody>
                     </table>
