nog meer dooie links verbeterd

--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -981,12 +981,12 @@
                                             <li><span style="color: #ffffff;"><strong>Chat</strong></span></li>
                                         </ul>
                                     </div>
-                                    <p><span style="color: #5a5a5a;">In these challenging times it can be (even more) difficult to stay in contact with fellow students, for example, if you need to work together for class. Group work becomes easier with Microsoft Teams.</span></p>
+                                    <p><span style="color: #5a5a5a;">This is instruction is for students only! Working togehter becomes easier with Microsoft Teams.</span></p>
                                 </td>
                                 <td style="width: 4.47733%;">
                                     <p><strong>&nbsp;</strong></p>
                                 </td>
-                                <td style="width: 22.3964%;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/teams-for-students" data-api-returntype="Page" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/teams-for-students"> <span>View more</span> </a></td>
+                                <td style="width: 22.3964%;"><a class="btn Button" style="margin: 5px;" href="https://student.uva.nl/en/topics/microsoft-teams" data-api-returntype="Page" data-api-endpoint="https://student.uva.nl/en/topics/microsoft-teams"> <span>View more</span> </a></td>
                             </tr>
                         </tbody>
                     </table>
