--- a/A-Z/Homepage/AZ-Homepage_22-23.html
+++ b/A-Z/Homepage/AZ-Homepage_22-23.html
@@ -804,7 +804,7 @@
                                 <td style="width: 4.47733%;">
                                     <p><strong>&nbsp;</strong></p>
                                 </td>
-                                <td style="width: 22.3964%;"><a class="btn Button" style="margin: 5px;" href="https://canvas.uva.nl/courses/8175/pages/grades-gradebook" data-api-endpoint="https://canvas.uva.nl/api/v1/courses/8175/pages/grades-gradebook" data-api-returntype="Page"> <span>View more</span> </a></td>
+                                <td style="width: 22.3964%;"><a class="btn Button" style="margin: 5px;" href="https://community.canvaslms.com/t5/Instructor-Guide/tkb-p/Instructor#Grades" data-api-endpoint="https://community.canvaslms.com/t5/Instructor-Guide/tkb-p/Instructor#Grades" data-api-returntype="Page"> <span>View more</span> </a></td>
                             </tr>
                         </tbody>
                     </table>
