CSSci update homepage

--- a/CCSi/Homepage_Studiepagina.html
+++ b/CCSi/Homepage_Studiepagina.html
@@ -30,40 +30,40 @@
     <div id="About" style="background-color: #ffffff; height: auto; padding-left: 30px; padding-top: 30px; padding-bottom: 50px;">
         <div class="content-box pad-box-mini border border-trbl border-round" style="background-color: #fafafa; border-width: 2px; padding: 30px; margin-right: 21px;">
             <p>Dear CSSci student,<br>
-            <br>Welcome to the Computational Social Science programme page on Canvas. Via this page you will be informed on relevant information connected to the Computational Social Science programme. Have a look at the Modules and meet the CSSci team, see what&rsquo;s coming up in the next Tuesdays at the Attic session and find useful resources for you as a CSSci student. Please note that course specific information can be found in the connected course page on Canvas.<br>
+            <br>Welcome to the Computational Social Science programme page on Canvas. Via this page you will be informed on relevant information connected to the Computational Social Science programme. Have a look at the Modules and meet the CSSci team, see what’s coming up in the next Tuesdays at the Attic session and find useful resources for you as a CSSci student. Please note that course specific information can be found in the connected course page on Canvas.<br>
             <br>Best,
             <br>the CSSci Team</p>
         </div>
 
         <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 1px; padding-bottom: 20px; border-color: #f9e663; title="" href="/courses/34505/modules/279806?wrap=1">
-            <h5><span style="font-size: 14pt; color: #1e1e1e;">Tuesdays at the Attic</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>Every first and third Tuesday of the month we have the amazing opportunity to 
-                be at the attic of ‘Het Limmickhof’, a building at the Amstelhoven complex: Computational Social Science’s Tuesdays at the Attic.</em></span>
+            <h5><span style="font-size: 14pt; color: #1e1e1e;">Friday at the Attic</span></h5>
+            <span style="font-size: 10pt; color: #124240;"><em>Every first and third Friday of the month we have the amazing opportunity to 
+                be at the attic of ‘Het Limmickhof’, a building at the Amstelhoven complex: Computational Social Science’s Friday at the Attic.</em></span>
         </a>
 
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="/courses/34505/modules/279806?wrap=1">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="/courses/34505/modules#module_319364">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Advanced Reading Group</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>The advanced reading group focuses on theory and complex topics in computational social science. We will balance theoretical readings in political science and sociology with cutting-edge research in computational social science.</em></span>
         </a>
 
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="/courses/34505/modules/319364?wrap=1">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="/courses/34505/modules#module_290543">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Career Development</span></h5>
             <span style="font-size: 10pt; color: #124240;"><em>You, as a Computational Social Science student, will start your career development from Day 1 in the programme. Throughout the courses you will further specialise and professionalise your academic knowledge and skills and you will expand your network when working with external partners.</em></span>
         </a>
 
-        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="/courses/34505/modules/279806?wrap=1">
+        <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="/courses/34505/modules#module_290554">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Student Wellbeing</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>Coming soon..</em></span>
+            <span style="font-size: 10pt; color: #124240;"><em>The UvA offers many different services for students regarding their wellbeing. Are you looking for guidance, help or support to improve your wellbeing, these services could be helpful. Not sure which path to take or who to contact? Take a look at the UvA wellbeing infographic or make an appointment with the studyadviser.</em></span>
         </a>
 
         <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="/courses/34505/modules/290555?wrap=1">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Examinations Board</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>Coming soon..</em></span>
+            <span style="font-size: 10pt; color: #124240;"><em>The Examinations Board has various legal duties and powers in relation to the quality of assessments, certification, exemptions and the handling of fraud and plagiarism. The Board reviews, amongst other, requests for exemptions, and approval of electives and extracurricular courses.</em></span>
         </a>
 
         <a id="" class="Button Button--large" style="border-width: 2px; width: 91%; height: 20%; text-align: left; margin-left: auto; margin-top: 16px; padding-bottom: 20px; border-color: #f9e663; title="" href="/courses/34505/modules/315547?wrap=1">
             <h5><span style="font-size: 14pt; color: #1e1e1e;">Programme Committee</span></h5>
-            <span style="font-size: 10pt; color: #124240;"><em>Coming soon..</em></span>
+            <span style="font-size: 10pt; color: #124240;"><em>The Programme Committee (PC) is a representative advisory body in which students and teaching staff discuss the quality and content of education.</em></span>
         </a>
 
     </div>
@@ -82,7 +82,13 @@
             </div>
         </div>
 
-        <img style="margin-top: 20px;" src="/courses/34505/files/8354447/preview" alt="CSSI-Team-2.png" />
+        <img style="margin-top: 20px;" src="/courses/34505/files/9448079/preview" alt="Team CSSci 5.10.23.jpg" />
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
+        <p>&nbsp;</p>
         <p>&nbsp;</p>
     </div>
 
