ANS info met youtube video's

--- a/A-Z/Exams/ANS/Info_ANS.html
+++ b/A-Z/Exams/ANS/Info_ANS.html
@@ -13,7 +13,7 @@
     </div>      
     
     <!-- Introduction + handige links -->
-    <table style="width:100%; padding:5px">
+    <table style="width:100%; padding:5px; margin-bottom:10px">
         <tr>
 
             <!-- Introduction-->
@@ -48,6 +48,18 @@
             </td>   
 
         </tr>
+    </table>
+
+  
+
+    <table style="width:100%">
+        <td style="width:49%">
+            <iframe class="lti-embed" style="width: 100%; height:280px" title="How to Start as a Student?" src="https://www.youtube-nocookie.com/embed/LT_CdWhxa00?feature=oembed&amp;rel=0" width="640" height="480" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *; clipboard-write *; display-capture *"></iframe>
+        </td>
+        <td style="width:1%"> </td>
+        <td style="width:49%">
+            <iframe class="lti-embed" style="width: 100%; height:280px" title="How to Start as a Teacher in Ans?" src="https://www.youtube-nocookie.com/embed/GjvAvXJJvRY?feature=oembed&amp;rel=0" width="640" height="480" allowfullscreen="allowfullscreen" webkitallowfullscreen="webkitallowfullscreen" mozallowfullscreen="mozallowfullscreen" allow="geolocation *; microphone *; camera *; midi *; encrypted-media *; autoplay *; clipboard-write *; display-capture *"></iframe>
+        </td>
     </table>
 
     <!-- Afsluitende banner -->
